# nano-sampler-jax

./: .coverage  .gitignore  LICENSE  README.md  pyproject.toml
src/ergodix/distributions/: base.py  gaussians.py
src/ergodix/visuals/: README.md  __init__.py  _core.py  comparison.py  projection.py  samples.py
src/nano_sampler_jax.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/nano_sampler_jax/distributions/: BLR.py  __init__.py  banana.py  base.py  funnel.py  gaussians.py  rings.py  rosenbrock.py  utils.py
src/nano_sampler_jax/slips/: README.md  __init__.py  geom.py  mala.py  params.py  schedules.py  slips.py
tests/: conftest.py  test_distributions.py  test_schedules.py  test_slips.py  test_utils.py  test_visuals.py
